--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,12 @@ android {
 }
 
 dependencies {
-    // Picasso / Glide / Fresco
-    implementation 'com.squareup.picasso:picasso:2.8'
 
-    // Volley : requêtes HTTP
     implementation 'com.android.volley:volley:1.2.1'
 
-    // GSON : lecture du flux JSON
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
